# lastBench

./: .env.example  README.md  docker-compose.yml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py
apps/api/app/: main.py
apps/api/app/api/: admin.py  auth.py  courses.py  deps.py  learning.py  router.py
apps/api/app/auth/: security.py
apps/api/app/core/: config.py
apps/api/app/db/: session.py
apps/api/app/models/: __init__.py  course.py  enrollment.py  enums.py  lesson.py  module.py  progress.py  quiz.py  sandbox.py  user.py
apps/api/app/schemas/: auth.py  course.py  quiz.py  sandbox.py
apps/api/app/services/: progress_service.py  quiz_service.py  sandbox_service.py
apps/api/tests/: conftest.py  test_flows.py  test_progress_logic.py  test_public_courses.py
apps/web/: Dockerfile  package.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/admin/: page.tsx
apps/web/src/app/admin/analytics/: page.tsx
apps/web/src/app/admin/courses/: page.tsx
apps/web/src/app/courses/: page.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/app/profile/: page.tsx
apps/web/src/app/register/: page.tsx
apps/web/src/components/: ui.test.tsx  ui.tsx
apps/web/src/features/auth/: login-form.tsx
apps/web/src/features/courses/: course-catalog.tsx
apps/web/src/lib/: api.ts  auth.ts
apps/web/src/types/: domain.ts
docs/: api.md  architecture.md  roadmap.md  setup.md
docs/screenshots/: README.md
scripts/: dev.sh  seed_demo_data.py
(+5 files in other folders)
